Removal of a container and creating a SASS file

--- a/index.html
+++ b/index.html
@@ -2,31 +2,23 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>jQuary Gauge Component</title>
+<title>jQuery Gauge Component</title>
 <link rel="stylesheet" href="style.css"/>
 
 </head>
 <body>
 <div class="container">  
-
-	<div class="jQuery">
-		<div class="frame">
-		    <div class="labels">
-		      <span class="min">0</span>
-		      <span class="max">1000</span>
-		    </div>
-		    <span class="pointer">
-		      <span class="pointer-cap"></span>
-		      <span class="value">0</span>
-		    </span>
-		</div>
+	<div class="frame">
+	    <div class="labels">
+	      <span class="min">0</span>
+	      <span class="max">1000</span>
+	    </div>
+	    <span class="pointer">
+	      <span class="pointer-cap"></span>
+	      <span class="value">0</span>
+	    </span>
 	</div>
-
 </div>	
-
-
-
-  
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="main.js"></script>
 </body>
